Fix form alignment by displaying it as a table

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,48 @@
 @charset "utf-8";
 
+h1 {
+	text-align: center;
+}
+
 div {
 	width: 55%;
 	margin: 0px auto;
 }
 
+.red {
+	background-color: red;
+	color: white; 
+}
+
+.blue {
+	background-color: purple;
+	color: white; 
+}
+
 fieldset {
 	margin: 10px;
-	border: 5px solid yellow;
+	border: 8px solid yellow;
 	background-color: lightyellow; 
+	display: table; 
+}
+
+label {
+	padding-left: 15%;
+}
+
+p { 
+	display: table-row; 
+	line-height: 25px; 
+}
+
+label { 
+	display: table-cell; 
+	width: 200px;
+	padding: 0px 20px;
+	text-align: right;
+}
+
+input { 
+	display: table-cell; 
 }
 
